--- a/src/App.css
+++ b/src/App.css
@@ -62,3 +62,13 @@ body {
 .display-block {
   display: block;
 }
+
+.selected {
+  border-top: 3px solid black;
+  padding-top: 40px;
+}
+
+.options {
+  position: absolute;
+  margin-top: -28px;
+}
