--- a/vite-version/src/App.css
+++ b/vite-version/src/App.css
@@ -1,42 +1,78 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+:root {
+  --gutter: 20px;
+  --gray1: #aaa;
+  --gray2: #ccc;
+  --gray3: #eee;
+  --gray4: whiteSmoke;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+body {
+  margin: 0;
+  font-family: sans-serif;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+.App {
+  margin: var(--gutter);
+}
+
+.insert-indicator {
+  display: none;
+  position: absolute;
+  pointer-events: none;
+  border-top: 2px solid var(--gray1);
+}
+
+  .insert-indicator.active {
+    display: block;
   }
-  to {
-    transform: rotate(360deg);
+
+.row {
+  flex: 1;
+  margin: -1px;
+  display: flex;
+  overflow: auto;
+  padding: var(--gutter);
+  background: var(--gray3);
+  border: 1px solid var(--gray2);
+}
+
+.col {
+  flex: 1;
+  display: flex;
+  margin-left: -1px;
+  background: white;
+  flex-direction: column;
+  min-height: var(--gutter);
+  border: 1px solid var(--gray2);
+}
+
+.item {
+  padding: var(--gutter);
+  background: var(--gray4);
+}
+
+.dim {
+  opacity: 0.25;
+}
+
+  .dim > * {
+    pointer-events: none;
   }
+
+.display-block {
+  display: block;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.editor {
+  display: flex;
 }
 
-.card {
-  padding: 2em;
+.layout-pane {
+  flex: 1;
 }
 
-.read-the-docs {
-  color: #888;
+.properties-pane {
+  width: 400px;
+  background: var(--gray4);
+  margin-left: var(--gutter);
 }
